--- a/tasks/node-setup.yml
+++ b/tasks/node-setup.yml
@@ -25,7 +25,7 @@
     - node
 
 - name: npmjs global settings export path in case I don't have dotfiles installed
-  shell: export PATH=~/.local/.npm-global/bin:$PATH
+  shell: export PATH
   tags:
     - install
     - node
