--- a/local.yml
+++ b/local.yml
@@ -3,6 +3,9 @@
     source_key: "./.ssh/id_ed25519"
     dest_key: "{{ lookup('env', 'HOME') }}/.ssh/id_ed25519"
     personal: "{{ lookup('env', 'HOME') }}/personal"
+  environment:
+    N_PREFIX: "{{ lookup  'env', 'HOME')}}/.local/n/bin"
+    PATH: "{{ lookup('env', 'HOME')}}/.local/.npm-global/bin:{{ ansible_env.PATH }}"
   pre_tasks:
     - name: Update cache
       become: true
@@ -14,6 +17,10 @@
         - install
         - core
   tasks:
+    - name: PATH
+      shell: echo $PATH
+    - name: N_PREFIX
+      shell: echo $N_PREFIX
     - import_tasks: tasks/ssh.yml
     - import_tasks: tasks/git-setup.yml
     - import_tasks: tasks/node-setup.yml
