--- a/tasks/node-setup.yml
+++ b/tasks/node-setup.yml
@@ -12,11 +12,11 @@
     - install
     - node
 
-- name: add npmjs to path
-  shell: PATH=~/.local/.npm-global/bin:$PATH
-  tags:
-    - install
-    - node
+# - name: add npmjs to path
+#   shell: PATH=~/.local/.npm-global/bin:$PATH
+#   tags:
+#     - install
+#     - node
 
 - name: npmjs global settings
   shell: npm config set prefix '~/.local/.npm-global'
@@ -24,12 +24,12 @@
     - install
     - node
 
-- name: npmjs global settings export path in case I don't have dotfiles installed
-  shell: export PATH=~/.local/.npm-global/bin:$PATH
-  tags:
-    - install
-    - node
-    - npm-path
+# - name: npmjs global settings export path in case I don't have dotfiles installed
+#   shell: export PATH=~/.local/.npm-global/bin:$PATH
+#   tags:
+#     - install
+#     - node
+#     - npm-path
 
 - name: Install N
   npm:
