--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -16,66 +16,5 @@
     - install
     - dotfiles
     - stow
-- stow:
-    state: present
-    package: zsh
-    dir: "{{ lookup('env', 'HOME') }}/.dotfiles/zsh"
-    target: "$HOME"
-  tags:
-    - install
-    - dotfiles
-    - stow
-- stow:
-    state: present
-    package: nvim
-    dir: "{{ lookup('env', 'HOME') }}/.dotfiles/nvim"
-    target: "$HOME"
-  tags:
-    - install
-    - dotfiles
-    - stow
-- stow:
-    state: present
-    package: starship
-    dir: "{{ lookup('env', 'HOME') }}/.dotfiles/starship"
-    target: "$HOME"
-  tags:
-    - install
-    - dotfiles
-    - stow
-- stow:
-    state: present
-    package: tmux
-    dir: "{{ lookup('env', 'HOME') }}/.dotfiles/tmux"
-    target: "$HOME"
-  tags:
-    - install
-    - dotfiles
-    - stow
-- stow:
-    state: present
-    package: dev
-    dir: "{{ lookup('env', 'HOME') }}/.dotfiles/dev"
-    target: "$HOME"
-  tags:
-    - install
-    - dotfiles
-    - stow
-- stow:
-    state: present
-    package: bash
-    dir: "{{ lookup('env', 'HOME') }}/.dotfiles/bash"
-    target: "$HOME"
-  tags:
-    - install
-    - dotfiles
-    - stow
-- stow:
-    state: present
-    package: bin
-    dir: "{{ lookup('env', 'HOME') }}/.dotfiles/bin"
-    target: "$HOME"
-  tags:
-    - install
-    - dotfiles
-    - stow
+- name: Stow dotfiles
+  shell: cd $HOME/.dotfiles/ && ./stow-folders.sh
