Changed packager installer to ansible

--- a/tasks/core-setup.yml
+++ b/tasks/core-setup.yml
@@ -26,6 +26,7 @@
     - neovim
     - core
 - name: Add Yarn apt key
+  become: true
   apt_key:
     url: https://dl.yarnpkg.com/debian/pubkey.gpg
   tags:
@@ -34,6 +35,7 @@
     - core
     - dotfiles
 - name: Add Yarn repository
+  become: true
   apt_repository:
     repo: "deb https://dl.yarnpkg.com/debian/ stable main"
     filename: yarn
@@ -70,8 +72,61 @@
     - neovim
     - core
     - dotfiles
-- name: Install manual packages
-  shell: cd $HOME/ansible && ./install-packages.sh
+- name: Getting last exa_version
+  command: curl -s "https://api.github.com/repos/ogham/exa/releases/latest" | grep -Po '\"tag_name\":\"v\K[0-9.]+'
+  register: EXA_VERSION
+  tags:
+    - install
+    - neovim
+    - core
+    - dotfiles
+- name: Downloading exa
+  shell: curl -Lo exa.zip "https://github.com/ogham/exa/releases/latest/download/exa-linux-x86_64-v{{EXA_VERSION}}.zip"
+  tags:
+    - install
+    - neovim
+    - core
+    - dotfiles
+- name: Install exa
+  become: true
+  shell: unzip -q exa.zip bin/exa -d /usr/local
+  tags:
+    - install
+    - neovim
+    - core
+    - dotfiles
+- name: Remove exa.zip
+  shell: rm -rf exa.zip
+  tags:
+    - install
+    - neovim
+    - core
+    - dotfiles
+- name: Getting last lazygit_version
+  command: curl -s "https://api.github.com/repos/jesseduffield/lazygit/releases/latest"| grep -Po '"tag_name":"v\K[0-35.]+'
+  register: LAZYGIT_VERSION
+  tags:
+    - install
+    - neovim
+    - core
+    - dotfiles
+- name: Downloading lazygit
+  shell: curl -Lo lazygit.tar.gz "https://github.com/ogham/exa/releases/latest/download/exa-linux-x86_64-v{{LAZYGIT_VERSION}}.zip"
+  tags:
+    - install
+    - neovim
+    - core
+    - dotfiles
+- name: Install lazygit
+  become: true
+  shell: tar xf lazygit.tar.gz -C /usr/local/bin lazygit
+  tags:
+    - install
+    - neovim
+    - core
+    - dotfiles
+- name: Remove lazygit.tar.gz
+  shell: rm -rf lazygit.tar.gz
   tags:
     - install
     - neovim
