--- a/tasks/core-setup.yml
+++ b/tasks/core-setup.yml
@@ -74,8 +74,7 @@
     - core
     - dotfiles
 - name: Getting last exa_version
-  shell: $(curl -s "https://api.github.com/repos/ogham/exa/releases/latest" | grep -Po '\"tag_name\":\"v\K[0-9.]+')
-  register: EXA_VERSION
+  shell: EXA_VERSION=$(curl -s "https://api.github.com/repos/ogham/exa/releases/latest" | grep -Po '\"tag_name\":\"v\K[0-9.]+')
   tags:
     - test
     - install
@@ -108,8 +107,7 @@
     - core
     - dotfiles
 - name: Getting last lazygit_version
-  shell: $(curl -s "https://api.github.com/repos/jesseduffield/lazygit/releases/latest"| grep -Po '"tag_name":"v\K[0-35.]+')
-  register: LAZYGIT_VERSION
+  shell: LAZYGIT_VERSION=$(curl -s "https://api.github.com/repos/jesseduffield/lazygit/releases/latest"| grep -Po '"tag_name":"v\K[0-35.]+')
   tags:
     - test
     - install
