--- a/tasks/core-setup.yml
+++ b/tasks/core-setup.yml
@@ -108,7 +108,7 @@
     - core
     - dotfiles
 - name: Getting last lazygit_version
-  shell: curl -s "https://api.github.com/repos/jesseduffield/lazygit/releases/latest"| grep -Po '"tag_name"{{:}} "v\K[0-35.]+'
+  shell: curl -s "https://api.github.com/repos/jesseduffield/lazygit/releases/latest"| grep -Po '"tag_name"{{ ":" }} "v\K[0-35.]+'
   register: LAZYGIT_VERSION
   tags:
     - test
