--- a/tasks/core-setup.yml
+++ b/tasks/core-setup.yml
@@ -117,7 +117,7 @@
     - core
     - dotfiles
 - name: Downloading lazygit
-  shell: curl -Lo lazygit.tar.gz "https://github.com/jesseduffield/lazygit/releases/latest/download/lazygit_{{LAZYGIT_VERSION.stdout}}_Linux_x86_64.tar.gz""
+  shell: curl -Lo lazygit.tar.gz "https://github.com/jesseduffield/lazygit/releases/latest/download/lazygit_{{LAZYGIT_VERSION.stdout}}_Linux_x86_64.tar.gz"
   tags:
     - test
     - install
