--- a/local.yml
+++ b/local.yml
@@ -2,9 +2,10 @@
   vars:
     source_key: "./.ssh/id_ed25519"
     dest_key: "{{ lookup('env', 'HOME') }}/.ssh/id_ed25519"
+    current_user: "{{ ansible_user_id }}"
     personal: "{{ lookup('env', 'HOME') }}/personal"
   environment:
-    N_PREFIX: "{{ lookup('env', 'HOME') }}/.local/n"
+    N_PREFIX: "{{ lookup('env', 'HOME') }}/.local/n/bin"
     PATH: "{{ lookup('env', 'HOME')}}/.local/.npm-global/bin:{{ ansible_env.PATH }}"
   pre_tasks:
     - name: Update cache
