--- a/tasks/zsh-setup.yml
+++ b/tasks/zsh-setup.yml
@@ -7,10 +7,17 @@
     - "install"
     - "dotfiles"
     - "zsh"
-
+# - name: Register current user (workaround to change default shell)
+#   shell: whoami
+#   register: current_user
+# - name: Change shell to zsh
+#   become: true
+#   shell: "chsh -s $(which zsh) {{ current_user.stdout}}"
 - name: Change shell to zsh
   become: true
-  shell: chsh -s $(which zsh)
+  user:
+    name: "{{ current_user }}"
+    shell: /bin/zsh
   tags:
     - "install"
     - "dotfiles"
