--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -36,7 +36,5 @@
     - dotfiles
     - install
     - ssh
-- name: Activate auth ssh-agent
-  shell: eval `ssh-agent -s`
 - name: Load ssh key
-  shell: ssh-add ~/.ssh/id_ed25519
+  shell: eval $(ssh-agent -s) && ssh-add ~/.ssh/id_ed25519
