--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -1,20 +1,20 @@
-- name: Installing stow
-  apt: name=stow
-  tags:
-    - install
-    - dotfiles
-    - stow
-- name: Cloning .dotfiles
-  ansible.builtin.git:
-    repo: "git@github.com:juanjozg/.dotfiles.git"
-    dest: "{{ lookup('env', 'HOME') }}/.dotfiles"
-    recursive: yes
-    update: yes
-    accept_hostkey: yes
-    version: main
+# - name: Cloning .dotfiles
+#   ansible.builtin.git:
+#     repo: "git@github.com:juanjozg/.dotfiles.git"
+#     dest: "{{ lookup('env', 'HOME') }}/.dotfiles"
+#     recursive: yes
+#     update: yes
+#     accept_hostkey: yes
+#     version: main
+- name: Clone .dotfiles
+  shell: cd $HOME/ansible/clone-dotfiles.sh
   tags:
     - install
     - dotfiles
     - stow
 - name: Stow dotfiles
   shell: cd $HOME/.dotfiles/ && ./stow-folders.sh
+  tags:
+    - install
+    - dotfiles
+    - stow
